[tool.poetry]
name = "homr"
version = "0.1.0"
description = "End-to-end Optical Music Recognition (OMR) system build on top of vision transformers."
authors = ["Christian Liebhardt <christian.liebhardt@arcor.de>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/liebharc/homr"
documentation = "https://github.com/liebharc/homr"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
numpy = "^2.2.6"
opencv-python-headless = "^4.12.0.88"
Pillow = "^11.3.0"
types-Pillow = "^10.2.0.20240822"
scipy = "^1.15.3"
scikit-image = "^0.25.2"
typing_extensions = "^4.14.1"
musicxml = "1.4"
rapidocr-onnxruntime = "^1.4.4"
onnxruntime="^1.22.1"
requests="^2.32.5"

[tool.poetry.group.gpu.dependencies]
onnxruntime-gpu = "^1.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
black = "^25.1.0"
ruff = "^0.11.11"
isort = "^6.0.1"
pyupgrade = "^3.20.0"
pre-commit = "^4.2.0"
pyclean = "^3.1.0"
coverage = "^7.8.2"
augly = "^1.0.0"
editdistance = "^0.8.1"
torchvision = "^0.22.1"
transformers = {extras = ["torch"], version = "^4.53.2"}
cairosvg = "^2.8.2"
types-requests = "^2.32.4.20250611"
segmentation-models-pytorch = "^0.5.0"
pytorch-lightning = "^2.5.2"
x-transformers = "^2.4.9"
torch = "^2.7.1"
onnx="^1.20.0"
onnx-simplifier="^0.4.36"
onnxconverter-common="^1.16.0"

[tool.poetry.group.docs]
[tool.poetry.group.docs.dependencies]
sphinx = "7.3.7"
furo = "2023.9.10"
myst-parser = "2.0.0"
myst-nb = "1.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern  = "^v(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

## Tools
[tool.black]
target-version = ['py311']
line-length = 100
preview = true

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "S", # flake8-bandit
    "A", # flake8-builtins
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "PL", # pylint
    "TID252", # flake8-tidy-imports
    "T201",  # no-print
]
ignore = [
    "UP015", # Unnecessary open mode parameters
    "PLC1901", # compare-to-empty-string
    "PLR0913", # Too many arguments to function call
    "S311",  # pseudo-random generators are not suitable for cryptographic purposes - we use them to randomize training data
    "S105",  # we use the term "token" for transformer tokens which sometimes triggers false positives of this warning
    "UP035",  # mypy doesn't seem to support "from typing import Self" yet
    "PLR0912",  # the parsing & conversion logic tends to create large functions, if someone has an idea then open a PR please!
    "PLR0915",  # the parsing & conversion logic tends to create large functions, if someone has an idea then open a PR please!
    "C901",  # the parsing & conversion logic tends to create large functions , if someone has an idea then open a PR please!
    "PLR2004"  # 
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.isort]
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
python_version = "3.10"

cache_dir = ".mypy_cache/strict"
show_error_codes = true
show_column_numbers = true

# Strict guidelines taken from https://github.com/pytorch/pytorch/blob/master/mypy-strict.ini
# Across versions of mypy, the flags toggled by --strict vary.  To ensure
# we have reproducible type check, we instead manually specify the flags
follow_imports = "normal"
warn_no_return = true
warn_return_any = false
disallow_any_unimported = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "training.architecture.transformer.custom_x_transformer"
ignore_errors = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 10
testpaths = ["tests"]

[tool.poetry.scripts]
homr = "homr.main:main"
